hphp/hack/test/typecheck/modules/module_bad_visibility.php
<?hh

<<file:__EnableUnstableFeatures('modules'), __Module('A')>>

class A {
  <<__Internal>>
  private function bad1(): void {}
  <<__Internal>>
  protected function bad2(): void {}
  <<__Internal>>
  public function good(): void {}
}
